# SPlabproject

./: CMakeLists.txt  JumpRope (1).cpp  JumpRope (1).h
src/: main.cpp
src/core/: FontManager.h  Game.cpp  Game.h  GameState.h  Ilevel.h
src/levels/: Dalgona.cpp  Dalgona.h  RedLightGreenLight.cpp  RedLightGreenLight.h
src/ui/: LobbyScreen.h  Menu.h
